<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="12sp"
        android:text="@string/are_you_pregnant"
        android:textColor="#222222"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llHaveABaby"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_background">

        <TextView
            android:id="@+id/tvHaveABaby"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/i_have_a_baby_in_my_womb"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGettingReady"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_background">

        <TextView
            android:id="@+id/tvGettingReady"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:text="@string/i_am_getting_ready"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>