<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="28dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="12sp"
            android:text="@string/preparing_for_healthy_pregnancy_start_now"
            android:textColor="#222222"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="8sp"
            android:paddingHorizontal="16dp"
            android:text="@string/let_me_tell_you_the_best_days_to_get_pregnant"
            android:textColor="#666666"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/last_menstrual_period"
            android:textColor="#444444"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button_background">

            <TextView
                android:id="@+id/tvLastMenstrualPeriod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="2021년 06월 30일"
                android:textColor="@color/gray"
                android:textSize="16sp" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/menstrual_cycle"
            android:textColor="#444444"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button_background">


            <com.github.reinaldoarrosi.maskededittext.MaskedEditText
                android:id="@+id/etMenstrualCycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:digits="0123456789"
                android:hint="28일"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:lineSpacingExtra="9sp"
            android:text="@string/menstrual_period"
            android:textColor="#444444"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/login_button_background">

            <com.github.reinaldoarrosi.maskededittext.MaskedEditText
                android:id="@+id/etMenstrualPeriod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:digits="0123456789"
                android:hint="5일"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</ScrollView>